manifests/frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: teamx
  labels:
    name: teamx
