manifests/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: teamx
  labels:
    app: frontend
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3001
  selector:
    app: frontend
  type: ClusterIP
